@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased
 
+  Fixed bug where non-String j.u.Property values where not being copied to the internal o.a.h.m.JobConf instance.
+
   Fixed bug where custom serializations where not recognized during co-grouping spills inside c.t.SpillableTupleList.
 
 1.0.12
